# habbitsTG_bot

./: .env.example  alembic.ini  app.py  bot.py  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4e8ad542e00f_initial_migration.py
api/: db.py  routes.py
api/models/: models.py
api/schemas/: schemas.py
bot/: bot.py
