[tool.poetry]
name = "habbitstg-bot"
version = "0.1.0"
description = ""
authors = ["NikitaErmakov <ermafin.@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
pytelegrambotapi = "^4.23.0"
aiogram = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
